--- a/Learn2CrackLogin1/app/src/main/res/layout/profile.xml
+++ b/Learn2CrackLogin1/app/src/main/res/layout/profile.xml
@@ -102,9 +102,13 @@
         android:layout_below="@+id/weight"
         android:layout_toEndOf="@+id/update"
         android:layout_toRightOf="@+id/update" />
-
-
-
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="56dp"
+        android:textColor="#000000"
+        android:id="@+id/update_error"
+        android:layout_below="@+id/update"
+        android:layout_alignParentRight="true"/>
 
 </RelativeLayout>
 
